# wake-word-detector

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
build-configuration/: build.rs
build-configuration/memory-layout/: rp2040.x  rp2350.x  rp2350_riscv.x
spoken-word-detection-model/: README.md  convert_to_tflite.py  data_loader.py  evaluate.py  fuse_batch_normalization.py  generate_rust_constants.py  model.py  prepare_dataset.py  test_live.py  train.py  train_test_split.py
spoken-word-detection-model/models/: best_model.keras  best_model_fused.keras  final_model.keras  model_quantized.tflite
src/: audio.rs  audio_features.rs  detectable_words.rs  hardware_resources.rs  inference.rs  main.rs  mel_constants.rs  output.rs  tflite.rs
src/audio/: features.rs  mel_constants.rs  task.rs
src/inference/: tflite.rs  tflite_wrapper.cc  tflite_wrapper.h
src/output/: controller.rs  display_patterns.rs  instruction.rs  led_matrix.rs  sequence.rs
tflite-wrapper/: tflite_wrapper.cc  tflite_wrapper.h
