#
#  Cargo.toml
#  wake-word-detector
#
#  Created by Joel Lopes Da Silva on 2/14/26.
#  Copyright © 2026 Joel Lopes Da Silva. All rights reserved.
#

[package]
name = "wake-word-detector"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
build = "build-configuration/build.rs"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "1"
defmt-rtt = "1"

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.4", features = ["rt", "critical-section-impl"] }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.4", features = ["rt", "critical-section-impl"] }

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.12", features = ["rt", "critical-section-impl"] }