#
#  Cargo.toml
#  wake-word-detector
#
#  Created by Joel Lopes Da Silva on 2/14/26.
#  Copyright © 2026 Joel Lopes Da Silva. All rights reserved.
#

[package]
name = "wake-word-detector"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
build = "build-configuration/build.rs"

[profile.dev]
# The real-time audio processing code in this program requires
# a certain level of optimizations to avoid things like:
#   - every array access having a bounds check;
#   - every integer operation checking for overflow;
#   - no function inlining (may be relevant for libm::sqrtf and FFT);
#   - no loop unrolling or constant folding;
#   - the FPU not being used for some operations.
opt-level = 2

[build-dependencies]
regex = "1.11.0"
cc = "1.2"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "1"
defmt-rtt = "1"
pio = "0.3.0"
microfft = "0.6"    # no_std 512-point real FFT
libm = "0.2"        # sqrtf, logf for no_std

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.4", features = ["rt", "critical-section-impl"] }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.4", features = ["rt", "critical-section-impl"] }

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.12", features = ["rt", "critical-section-impl"] }